[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Josh Stephens <bsdtux@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
